--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ metadatatechnic: "",
 ownmetadataurl: "",
 usestreamcorsproxy: "true",
 corsproxy: "https://cors-anywhere.herokuapp.com/",
-streamurl: "https://node-16.zeno.fm/e09uvzb6u7zuv?rj-ttl=5&rj-tok=AAABc9pnuDQAYRhgsQEQ-O-rVA", 
+streamurl: "https://stream.zeno.fm/dzzrr87erwzuv", 
 streamtype: "radiozeno", //shoutcast2, icecast2, radiozeno, radionomy, radiojar, radioco
 icecastmountpoint: "",
 shoutcastpath: "/stream",
@@ -60,7 +60,7 @@ shoutcastid: "1",
 streamsuffix: "", 
 radionomyid: "", 
 radionomyapikey: "",
-radiozenoid: "gz0hqzb6u7zuv", 
+radiozenoid: "0dt1k87erwzuv", 
 radiojarid: "",  
 radiocoid: "",
 itunestoken: "1000lIPN", 
